package co.com.bspstore.sgip.modelo;

public class Rol {
}
